# rupnp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: tests.yml
examples/: discover.rs  discover_extra_fields.rs  discovery.rs  dump_scpd.rs  rendering_control.rs  scpds.rs  search_and_action.rs  subscribe.rs  subscribe_device.rs  visiting.rs
src/: datatypes.rs  device.rs  discovery.rs  error.rs  lib.rs  scpd.rs  service.rs  shared.rs  utils.rs
src/scpd/: action.rs  datatypes.rs  mod.rs  state_variable.rs
