[package]
name = "rupnp"
version = "0.1.7"
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/jakobhellermann/rupnp"
description = "An asynchronous library for finding UPnP control points, performing actions on them and reading their service descriptions."
categories = ["network-programming", "asynchronous"]
keywords = ["async", "upnp", "networking", "protocols"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
full_device_spec = []

[dependencies]
tokio = { version = "0.3", features = ["net", "io-util", "stream"] }
futures-util = { version = "0.3", default-features = false }
genawaiter = { version = "0.99", default-features = false, features = ["futures03"] }
get_if_addrs = "0.5"
http = "0.2"
ssdp-client = "0.5"
roxmltree = "0.13"
hyper = { git = "https://github.com/hyperium/hyper" }
bytes = "0.6"

[dev-dependencies]
tokio = { version = "0.3", features = ["macros", "fs", "rt-multi-thread"] }
futures = "0.3"
pin-utils = "0.1"
