[package]
name = "rupnp"
version = "2.0.0"
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/jakobhellermann/rupnp"
description = "An asynchronous library for finding UPnP control points, performing actions on them and reading their service descriptions."
categories = ["network-programming", "asynchronous"]
keywords = ["async", "upnp", "networking", "protocols"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = ["subscribe", "genawaiter", "get_if_addrs"]

full_device_spec = []
subscribe = ["tokio"]

[dependencies]
tokio = { version = "1.0", features = ["net", "io-util"], optional = true }
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
genawaiter = { version = "0.99", default-features = false, features = ["futures03"], optional = true }
get_if_addrs = { version = "0.5", optional = true }
http = "0.2"
ssdp-client = "2.0"
roxmltree = "0.18"
hyper = { version = "0.14", features = ["client", "http1", "tcp"] }
bytes = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "fs", "rt-multi-thread"] }
futures = "0.3"
pin-utils = "0.1"


[[example]]
name = "subscribe"
required-features = ["subscribe"]
